# benchmark_mps

./: .gitignore  README.md  pyproject.toml
alg/: algorithm2.py
configs/: formula_complexity.yaml  synthetic_scale.yaml  ten_models.yaml
docs/: formula_complexity_data.md
experiments/: aggregate_results.py  plot_results.py  run_case.py  run_grid.py
formulas/: formula_specs.py  predicates.py
generators/: base_channels.py  expand_tensor.py  synthetic_families.py
scripts/: run_benchmark.py  run_complex_formula_suite.py  run_experiments.py  run_formula_complexity.sh  run_formula_complexity_line2.py  run_synthetic_scale.sh  run_ten_models.sh
src/benchmark_mps/: __init__.py
src/benchmark_mps/algorithms/: algorithm2.py
src/benchmark_mps/baselines/: __init__.py  brute.py  schur.py
src/benchmark_mps/benchmarks/: harness.py  schema.py
src/benchmark_mps/formulas/: __init__.py  complex_formula_suite.py  complexity_data.py  formula.py  generator.py  parser.py
src/benchmark_mps/io/: output.py
src/benchmark_mps/metrics/: metrics.py
src/benchmark_mps/models/: __init__.py  examples.py  physical.py  synthetic.py
src/benchmark_mps/utils/: backend.py  linalg.py
utils/: io.py  metrics.py  reproducibility.py
